# some-scheme-compiler

./: .gitignore  Cargo.toml  README.md  ideas.org  loop.scm  test.scm  test0.scm  test_bad.scm  test_cons.scm  test_define.scm  test_ht.scm  test_if.scm  test_let.scm  test_set.scm  test_stuff.scm
src/: base.c  base.h  base_expr.rs  cdsl.rs  codegen.rs  cont_expr.rs  expr.rs  flat_expr.rs  grammar.pest  lifted_expr.rs  literals.rs  main.rs  nodes.rs  parse.rs  transform.rs  tree.h  utils.rs  vec.h
src/core/: Makefile  base  base.c  base.h  bit_array.c  bit_array.h  builtin.c  builtin.h  common.h  gc.c  gc.h  hash_table.h  queue.h  test.c  test_base.c  test_build.c  test_queue.c  test_tree.c  tree.c  tree.h  vec.h
