[package]
name = "some-scheme-compiler"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

[dependencies]
itertools = "0.9.0"
derive_more = "0.99.10"
structopt = "0.3.17"
failure = "0.1.8"
tempdir = "0.3.7"
include_dir = "0.6.0"
nom = "5.1.2"
moniker = "0.5.0"
pretty = { version = "0.9.0", features = ["termcolor"] }
termcolor = "1.1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
